--- a/deploy.yml
+++ b/deploy.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: your-bucket-region 
+          aws-region: Global
 
       - name: Sync to S3
-        run: aws s3 sync ./dist/ s3://your-s3-bucket-name --delete 
+        run: aws s3 sync ./dist/ s3://digitalwaveit --delete 
